<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bnav1"
        android:icon="@drawable/ic_store_white_24dp"
        android:title="@string/bbotton1" />

    <item
        android:id="@+id/bnav2"
        android:icon="@drawable/ic_card_giftcard_white_24dp"
        android:title="@string/bbotton2" />

    <item
        android:id="@+id/bnav3"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/bbotton3" />

    <item
        android:id="@+id/bnav4"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/bbotton4" />
    <item
        android:id="@+id/bnav5"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/bbotton4" />

</menu>